AC_PREREQ(2.59)
AC_CONFIG_MACRO_DIR([m4])
AC_INIT(libc11threads, 0.1)
AC_PROG_CC
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE
AM_PROG_CC_C_O 
LT_INIT
AC_PROG_LIBTOOL

AX_PTHREAD([true], [AC_MSG_ERROR("pthread not found!")])
AM_CONDITIONAL([WITH_PTHREAD], [$pthread])

LIBS="$PTHREAD_LIBS $LIBS"
CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
CC="$PTHREAD_CC"

AC_CONFIG_FILES(Makefile)
AC_OUTPUT